[tool.poetry]
name = "chronest"
version = "0.2.0"
description = ""
authors = ["Matvei Zekhov <zehov1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
flake8 = "^7.0.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.0.2"
ipykernel = "^6.29.3"
sphinx-autoapi = "^3.0.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
